--- a/Project/signup.html
+++ b/Project/signup.html
@@ -21,7 +21,7 @@
         <input type="password" name="password-confirmation" class="form-control" placeholder="Confirm Password" required>
 
         <input type="submit" name="submit" class="btn btn-lg btn-primary btn-block"  value="Sign Up">
-        <a href="login.html" id="backMenuLink">Déjà inscrit ?</a>
+        <a href="login.php" id="backMenuLink">Déjà inscrit ?</a>
     </form>
 
 </div>
